# Factorio-pt

./: .gitignore  CMakeLists.txt  README.md  build.ps1  compile_commands.json
.zed/: settings.json
assets/style-dataset/: manifest.example.json  sources.json
bevy-client/: Cargo.toml
bevy-client/.cargo/: config.toml
bevy-client/scripts/: clang-gnu-linker.cmd
bevy-client/src/: main.rs
docs/: README.md
docs/modules/: TEMPLATE.md
docs/modules/runtime/: README.md
docs/modules/simulation-core/: README.md
docs/modules/tooling-pipeline/: README.md
docs/modules/world-generation/: README.md
runtime/: CMakeCache.txt  CMakeLists.txt  build.bat  build2.bat
runtime/build-ninja/: CMakeCache.txt
runtime/build_release/: CMakeCache.txt
runtime/src/: gameplay.cpp  gameplay.h  graphics.cpp  graphics.h  main.cpp  render.cpp  render.h  runtime_state.h  world.cpp  world.h
scripts/: build.ps1  generate-hq-factorio-tiles.py  generate-style-atlas.py  generate_player_anim.py  generate_sd_textures.ps1  package-runtime-release.ps1  run-bevy.ps1
sim-rust/: Cargo.toml
sim-rust/src/: lib.rs
tools-csharp/: FactorioPt.Tools.csproj  Program.cs
tools-csharp/ai-trainer/: FactorioPt.AiTrainer.csproj  Program.cs
tools-python/: requirements.txt  sd_texture_gen.py
