cmake_minimum_required(VERSION 3.20)
project(FactorioPt LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_SCAN_FOR_MODULES OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(FACTORIO_PT_BUILD_RUNTIME "Build C++ runtime executable" ON)

if(FACTORIO_PT_BUILD_RUNTIME)
  add_subdirectory(runtime)
endif()

